# RAG_zzyl

./: .gitignore  README.md
db/: zzyl.sql
docs/: RAG实现总结.md  经验.md
project-zzyl-admin-vue3-java/: .env  .env.test  .eslintrc  .prettierrc  Dockerfile  README.md  default.conf  globals.d.ts  index.html  mockProdServer.ts  package.json  stylelint.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1703576351400.js
project-zzyl-admin-vue3-java/docs/: cover.md
zzyl/: pom.xml
zzyl-ai-service/: .env.example  .gitignore  README.md  main.py  pyproject.toml
zzyl-ai-service/api/: __init__.py  app.py
zzyl-ai-service/api/routes/: health.py  internal.py
zzyl-ai-service/config/: logging.py  settings.py
zzyl-ai-service/jobs/: __init__.py
zzyl-ai-service/knowledge-base/faq/: 养老院FAQ.md
zzyl-ai-service/knowledge-base/system-manuals/: 中州养老系统使用手册.md
zzyl-ai-service/loaders/: __init__.py  documents.py
zzyl-ai-service/models/: __init__.py
zzyl-ai-service/rag/: __init__.py  chunker.py  history.py  intent.py  knowledge_base.py  query_rewrite.py  service.py
zzyl-ai-service/retrievers/: __init__.py  dashscope_multimodal_embeddings.py  json_vector_store.py  langchain_vector_store.py  local_embeddings.py  rerank.py
zzyl-ai-service/tests/: conftest.py  test_health.py  test_internal_chat.py  test_knowledge_chunker.py  test_query_rewrite.py  test_rag_intent.py  test_settings.py  test_vector_store.py
zzyl/zzyl-common/: pom.xml
开发计划/: Java端开发计划.md  PLAN.md  python端开发计划.md  前端开发计划.md  阶段计划和指标.md
问题记录/: 4.26问题记录.md  4.27问题记录.md  4.28问题记录.md  解决过程.md
(+529 files in other folders)
