[project]
name = "zzyl-ai-service"
version = "0.1.0"
description = "AI assistant service for the ZZYL RAG system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0,<2.0.0",
    "dashscope>=1.20.0",
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "pypdf>=6.4.0,<7.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest>=8.4.0,<9.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "api",
    "config",
    "jobs",
    "loaders",
    "main.py",
    "models",
    "rag",
    "retrievers",
    "tests",
]

[tool.hatch.build.targets.sdist]
include = [
    "/api",
    "/config",
    "/jobs",
    "/loaders",
    "/main.py",
    "/models",
    "/rag",
    "/retrievers",
    "/tests",
    "/README.md",
    "/pyproject.toml",
    "/.env.example",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
